<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/city_name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:text="@string/current_temp"
        android:textSize="72sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_name" />

    <ImageView
        android:id="@+id/current_condition_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="62dp"
        android:importantForAccessibility="no"
        android:src="@drawable/sun_icon"
        app:layout_constraintBottom_toBottomOf="@id/current_feels_like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/current_temp" />

    <TextView
        android:id="@+id/current_feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:text="@string/current_feels_like"
        android:textSize="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/current_temp"
        app:layout_constraintTop_toBottomOf="@id/current_temp" />

    <TextView
        android:id="@+id/current_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="56dp"
        android:text="@string/current_low"
        android:textSize="20dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/current_feels_like"
        app:layout_constraintTop_toBottomOf="@id/current_feels_like" />

    <TextView
        android:id="@+id/current_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_high"
        android:textSize="20dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/current_low"
        app:layout_constraintTop_toBottomOf="@id/current_low" />

    <TextView
        android:id="@+id/current_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_humidity"
        android:textSize="20dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/current_high"
        app:layout_constraintTop_toBottomOf="@id/current_high" />

    <TextView
        android:id="@+id/current_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_pressure"
        android:textSize="20dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/current_humidity"
        app:layout_constraintTop_toBottomOf="@id/current_humidity" />

    <Button
        android:id="@+id/forecastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecast"
        android:layout_marginBottom="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>