<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="96dp">

    <ImageView
        android:id="@+id/current_condition_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="325dp"
        android:importantForAccessibility="no"
        android:src="@drawable/sun_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textColor="@color/black"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="@+id/current_condition_icon"
        app:layout_constraintLeft_toRightOf="@id/current_condition_icon"
        app:layout_constraintTop_toTopOf="@+id/current_condition_icon" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/sunrise"
        app:layout_constraintBottom_toBottomOf="@id/sunset"
        app:layout_constraintLeft_toRightOf="@id/date" />

    <TextView
        android:id="@+id/sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:text="@string/sunrise"
        app:layout_constraintBottom_toTopOf="@+id/date"
        app:layout_constraintLeft_toRightOf="@id/temp"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:text="@string/sunset"
        app:layout_constraintTop_toBottomOf="@+id/sunrise"
        app:layout_constraintLeft_toRightOf="@id/current_condition_icon"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/humidity"
        app:layout_constraintTop_toBottomOf="@+id/temp"
        app:layout_constraintLeft_toRightOf="@id/date" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:text="@string/pressure"
        app:layout_constraintTop_toBottomOf="@+id/sunset"
        app:layout_constraintLeft_toRightOf="@id/humidity"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>